Tentando refatorar leitor csv